--- a/logrotate/CMakeLists.txt
+++ b/logrotate/CMakeLists.txt
@@ -40,7 +40,7 @@ IF (${VERSION}.x STREQUAL ".x")
    message("version remainder: ${VERSION-REMAINDER}")
    # SET(BUILD_NUMBER ${GIT_VERSION})
    SET(BUILD_NUMBER ${VERSION-BASE})
-   SET(VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${BUILD_NUMBER}-${VERSION-REMAINDER})
+   SET(VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${BUILD_NUMBER})
 ENDIF()
 MESSAGE("Software Version: ${VERSION}")
 
